appId: com.saucelabs.mydemoapp.android
---

- launchApp:
    clearState: true

# Tela inicial
- assertVisible: "Products"

# Flow de login
- tapOn: "View menu"
- assertVisible: "Log In"
- tapOn: "Log In"

# Dados do usuário
- assertVisible: "Login"
- tapOn:
    id: "nameET"
- inputText: "standard_user"
- tapOn:
    id: "passwordET"
- inputText: "secret_sauce"
- hideKeyboard

# Login 
- assertVisible:
    text: "Login"
    index: 1

- tapOn:
    text: "Login"
    index: 1

# Verificar se o botão Log In foi atualizado para Log out
- tapOn: "View menu"
- assertVisible: "Log Out"

# Se estiver ok, irá retornar para o catálogo
- tapOn: "Catalog"